--- a/lab6_exe_D.html
+++ b/lab6_exe_D.html
@@ -47,12 +47,29 @@ Description : API Usage.
     <script>
         // Function to fetch and display students
         async function fetchStudents() {
-            
+            const response = await fetch('https://65dffaecff5e305f32a37d1b.mockapi.io/students');
+            const students = await response.json();
+            const studentList = document.getElementById('studentList');
+            studentList.innerHTML = '';
+            students.forEach(student => {
+                const li = document.createElement('li');
+                li.textContent = student.name;
+                li.onclick = function() { fetchCourses(student.id); };
+                studentList.appendChild(li);
+            });
         }
 
         // Function to fetch and display courses for a student
         async function fetchCourses(studentId) {
-            
+            const response = await fetch(`https://65dffaecff5e305f32a37d1b.mockapi.io/students/${studentId}/courses`);
+            const courses = await response.json();
+            const courseList = document.getElementById('courseList');
+            courseList.innerHTML = '';
+            courses.forEach(course => {
+                const li = document.createElement('li');
+                li.textContent = `${course.name} (Unit: ${course.unit})`;
+                courseList.appendChild(li);
+            });
         }
 
         // Fetch students on window load
